--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
     <version.java>1.8</version.java>
 
     <version.hamcrest>1.3</version.hamcrest>
+    <version.gson>2.8.5</version.gson>
     <version.junit>4.12</version.junit>
     <version.jsoup>1.11.3</version.jsoup>
     <version.mockito>1.10.19</version.mockito>
@@ -85,6 +86,12 @@
       <groupId>org.jsoup</groupId>
       <artifactId>jsoup</artifactId>
       <version>${version.jsoup}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>${version.gson}</version>
     </dependency>
 
     <dependency>
