--- a/pom.xml
+++ b/pom.xml
@@ -59,13 +59,13 @@
 
     <version.java>1.8</version.java>
 
-    <version.hamcrest>1.3</version.hamcrest>
-    <version.gson>2.8.5</version.gson>
-    <version.io-functions>1.0</version.io-functions>
-    <version.junit>4.12</version.junit>
-    <version.jsoup>1.12.1</version.jsoup>
-    <version.mockito>1.10.19</version.mockito>
-    <version.slf4j>1.7.25</version.slf4j>
+    <version.hamcrest>2.2</version.hamcrest>
+    <version.gson>2.8.6</version.gson>
+    <version.io-functions>1.1</version.io-functions>
+    <version.junit>5.6.0</version.junit>
+    <version.jsoup>1.12.2</version.jsoup>
+    <version.mockito>3.2.4</version.mockito>
+    <version.slf4j>1.7.30</version.slf4j>
     <version.thymeleaf>3.0.11.RELEASE</version.thymeleaf>
 
     <version.plugin.clean>3.1.0</version.plugin.clean>
@@ -73,7 +73,7 @@
     <version.plugin.dependency>3.1.1</version.plugin.dependency>
     <version.plugin.jar>3.1.1</version.plugin.jar>
     <version.plugin.resources>3.1.0</version.plugin.resources>
-    <version.plugin.surefire>2.22.0</version.plugin.surefire>
+    <version.plugin.surefire>2.22.2</version.plugin.surefire>
   </properties>
 
   <dependencies>
@@ -114,8 +114,8 @@
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
       <version>${version.junit}</version>
       <scope>test</scope>
     </dependency>
@@ -129,7 +129,7 @@
 
     <dependency>
       <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
+      <artifactId>mockito-core</artifactId>
       <version>${version.mockito}</version>
       <scope>test</scope>
     </dependency>
